--- a/pom.xml
+++ b/pom.xml
@@ -138,6 +138,13 @@
                 <version>${spring-boot.mybatis}</version>
             </dependency>
 
+            <!-- 验证码 -->
+            <dependency>
+                <groupId>com.github.penggle</groupId>
+                <artifactId>kaptcha</artifactId>
+                <version>${kaptcha.version}</version>
+            </dependency>
+
             <!-- pagehelper 分页插件 -->
             <dependency>
                 <groupId>com.github.pagehelper</groupId>
