--- a/live-gateway/pom.xml
+++ b/live-gateway/pom.xml
@@ -39,7 +39,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
-        </dependency>
+          </dependency>
 
         <!-- SpringCloud Loadbalancer -->
         <dependency>
@@ -47,7 +47,23 @@
             <artifactId>spring-cloud-loadbalancer</artifactId>
         </dependency>
 
+        <!--验证码 -->
+        <dependency>
+            <groupId>com.github.penggle</groupId>
+            <artifactId>kaptcha</artifactId>
+        </dependency>
 
+        <!-- Live Common Redis-->
+        <dependency>
+            <groupId>com.live</groupId>
+            <artifactId>live-common-redis</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
 
     </dependencies>
 
