--- a/live-modules/live-modules-system/pom.xml
+++ b/live-modules/live-modules-system/pom.xml
@@ -66,6 +66,19 @@
             <artifactId>live-common-log</artifactId>
         </dependency>
 
+        <!-- Swagger UI -->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>${swagger.fox.version}</version>
+        </dependency>
+
+        <!-- Live Common Swagger -->
+        <dependency>
+            <groupId>com.live</groupId>
+            <artifactId>live-common-swagger</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
