--- a/live-common/live-common-swagger/pom.xml
+++ b/live-common/live-common-swagger/pom.xml
@@ -24,10 +24,19 @@
         </dependency>
 
         <!-- Swagger -->
-        <dependency>
+      <!--  <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger2</artifactId>
             <version>${swagger.fox.version}</version>
+        </dependency>-->
+
+        <!--<dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>knife4j-micro-spring-boot-starter</artifactId>
+        </dependency>-->
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>knife4j-spring-boot-starter</artifactId>
         </dependency>
 
         <dependency>
