--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>live-modules/live-modules-system</module>
         <module>live-gateway</module>
         <module>live-auth</module>
+        <module>live-modules/live-modules-file</module>
     </modules>
     <name>live</name>
 
@@ -30,6 +31,7 @@
         <spring-boot.mybatis>2.2.2</spring-boot.mybatis>
         <swagger.fox.version>3.0.0</swagger.fox.version>
         <swagger.core.version>1.6.2</swagger.core.version>
+        <knife4j.version>2.0.9</knife4j.version>
         <tobato.version>1.27.2</tobato.version>
         <kaptcha.version>2.3.2</kaptcha.version>
         <pagehelper.boot.version>1.4.5</pagehelper.boot.version>
@@ -226,6 +228,23 @@
                 <groupId>com.live</groupId>
                 <artifactId>live-common-swagger</artifactId>
                 <version>${live.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.swagger</groupId>
+                <artifactId>swagger-annotations</artifactId>
+                <version>${swagger.core.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.github.xiaoymin</groupId>
+                <artifactId>knife4j-micro-spring-boot-starter</artifactId>
+                <version>${knife4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.github.xiaoymin</groupId>
+                <artifactId>knife4j-spring-boot-starter</artifactId>
+                <version>${knife4j.version}</version>
             </dependency>
 
         </dependencies>
